plugins {
  id 'application'
  id 'checkstyle'
  id 'pmd'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '3.5.14'
  id 'com.github.ben-manes.versions' version '0.51.0'
  id 'org.owasp.dependencycheck' version '12.2.0'
  id 'org.sonarqube' version '7.2.3.7755'
  id 'info.solidsoft.pitest' version '1.9.11'
  id 'io.freefair.lombok' version '9.2.0'
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    name = "AzureArtifacts"
    url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
  }
}
group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += [
    '-parameters',
    '-Xlint:unchecked',
    '-Werror'
  ]
}

tasks.withType(Test).configureEach {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
  }
}

checkstyle {
  maxWarnings = 0
  toolVersion = '13.4.2'
  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
  toolVersion = "6.55.0"
  sourceSets = [sourceSets.main]
  reportsDir = file("${project.getLayout().getBuildDirectory()}/reports/pmd")
  // https://github.com/pmd/pmd/issues/876
  ruleSets = []
  ruleSetFiles = files("config/pmd/ruleset.xml")
}

jacocoTestCoverageVerification {
  violationRules {
    rule {
      excludes = ["com.gargoylesoftware.htmlunit.javascript.host.css.StyleAttributes"]
    }
  }
}

jacocoTestReport {
  executionData(test)
  reports {
    xml.required.set(true)
    csv.required.set(false)
    xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
  }
}

pitest {
  junit5PluginVersion = '1.1.2'
  targetClasses = ['uk.gov.hmcts.reform.iataskconfiguration.*']
  excludedClasses = [
    'uk.gov.hmcts.reform.iataskconfiguration.config.*',
    'uk.gov.hmcts.reform.iataskconfiguration.Application'
  ]
  threads = 10
  outputFormats = ['XML', 'HTML']
  timestampedReports = false
  mutationThreshold = 80
}

tasks.named('pitest') {
  group = "Verification"
}

tasks.named('sonarqube') {
  dependsOn test, jacocoTestReport
  group = "Verification"
}

sonarqube {
  properties {
    property "sonar.projectName", "Reform :: ia-task-configuration"
    property "sonar.projectKey", "uk.gov.hmcts.reform:ia-task-configuration"
    property "sonar.coverage.jacoco.xmlReportPaths", layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml").get().asFile
    property "sonar.pitest.mode", "reuseReport"
    property "sonar.pitest.reportsDirectory", "build/reports/pitest"
    property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/iataskconfiguration/config/**," +
      "src/main/java/uk/gov/hmcts/reform/iataskconfiguration/Application.java"
  }
}

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  // Specifies if the build should be failed if a CVSS score above a specified level is identified.
  // range of 0-10 fails the build, anything greater and it doesn't fail the build
  failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
  suppressionFile = 'config/owasp/suppressions.xml'

  analyzers {
    // Disable scanning of .NET related binaries
    assemblyEnabled = false
  }
}

dependencyManagement {
  imports {
    mavenBom 'com.fasterxml.jackson:jackson-bom:2.21.2'
  }
  dependencies {
    dependencySet(group: 'org.junit.jupiter', version: '5.14.4') {
      entry 'junit-jupiter'
      entry 'junit-jupiter-api'
      entry 'junit-jupiter-engine'
      entry 'junit-jupiter-params'
    }

    dependencySet(group: 'org.junit.platform', version: '1.14.4') {
      entry 'junit-platform-commons'
      entry 'junit-platform-engine'
      entry 'junit-platform-launcher'
    }
  }
}

repositories {
  mavenLocal()
  maven { url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1' }
  mavenCentral()
}

dependencies {
  testImplementation 'org.springframework.boot:spring-boot-starter-test'

  testImplementation "com.fasterxml.jackson.core:jackson-databind"
  testImplementation "com.fasterxml.jackson.core:jackson-core"
  testImplementation "com.fasterxml.jackson.core:jackson-annotations"

  testImplementation group: 'org.pitest', name: 'pitest', version: '1.9.11'
  testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: '1.9.11'

  testImplementation group: 'org.camunda.bpm.dmn', name: 'camunda-engine-dmn', version: '7.20.0'
  testImplementation group: 'org.camunda.bpm.assert', name: 'camunda-bpm-assert', version: '8.0.0'
  testImplementation group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.20.0'
}

mainClassName = 'uk.gov.hmcts.reform.iataskconfiguration.Application'

bootJar {
  getArchiveFileName().set(provider {
    'ia-task-configuration.jar'
  })

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

wrapper {
  distributionType = Wrapper.DistributionType.ALL
}
